--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
       </div>
     </div>
   </section>
+ <section class="coffee-donation">
+    <h2>☕ Buy Me a Coffee</h2>
+    <p>If you like my work and want to support me, you can buy me a coffee. Your support means a lot! ❤️</p>
+    <a href="https://buymeacoffee.com/934406abhiw" target="_blank" rel="noopener" class="coffee-btn">Buy Me a Coffee</a>
+  </section>
   
 
   
